import {runCases} from "./code-generation-test-case-runner";

runCases("BinaryExpression", "binary-expression");
